# SPS2025

./: .gitignore  CMakeLists.txt  README  config.py  tasks
C/: CSVCell.c  CSVCell.h  array_to_python.c  array_to_python.h  back_tester.c  back_tester.h  config.h  csv_util.c  csv_util.h  date_util.c  date_util.h  directions.c  directions.h  file_util.c  file_util.h  main.c  memory_util.c  memory_util.h  probability.c  probability.h  rank_hash_map.c  rank_hash_map.h  ranks.c  ranks.h  sequence_analyzer.c  sequence_analyzer.h  sequence_counting_trie.c  sequence_counting_trie.h  stock_picker.c  stock_picker.h  tree.c  tree.h  tree_file_util.c  tree_file_util.h  trie_printer.c
C/csv_lion/: CsvCell.cpp  CsvCell.h  CsvCursor.c  CsvCursor.h  CsvReader.c  MappedFileCursor.h  StringSpanner.c
C/csv_monkey/: CsvCell.c  CsvCell.cpp  CsvCell.h  CsvCursor.c  CsvCursor.h  CsvReader.c  CsvReader.h  MappedFileCursor.c  StringSpanner.c  StringSpanner.h
CPP/: grapher.cpp  grapher.h  matplotlibcpp.h
CPP/csv_lion/: CsvCell.cpp  CsvCell.h  CsvCursor.c  CsvCursor.h  CsvReader.c  CsvReader.h  MappedFileCursor.c  MappedFileCursor.h  StringSpanner.c  StringSpanner.h
C_tests/: csv_util_test.c  csv_util_test.h  file_util_test.c  file_util_test.h  main.c  ranks_test.c  ranks_test.h  sequence_counting_trie_test.c  test_data.h  tree_file_util_test.c  tree_file_util_test.h  tree_test.c  tree_test.h
C_tests/test_data/: fake_data.txt  fake_data2.txt
Python/: main.py
